--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,6 +29,11 @@ body li{
   padding: 20px;
 }
 
+.delete-list:hover{
+  color: red;
+  cursor: pointer;
+}
+
 .task-card{
   border-radius: 0 0 20px 20px;
   box-shadow: 5px 5px 20px 2px black;
